# SEC-LAB2

./: .gitignore  README.md  raport.md
client/: Cargo.toml
client/src/: action.rs  authentication.rs  crypto.rs  main.rs  validations.rs  yubi.rs
server/: .env.example  .gitignore  Cargo.toml
server/src/: action.rs  authentication.rs  crypto.rs  database.rs  mailer.rs  main.rs
shared_stuff/: Cargo.toml
shared_stuff/src/: communication_types.rs  crypto.rs  lib.rs  validations.rs
