[package]
name = "client"
version = "0.1.0"
authors = ["SEC"]
edition = "2021"

[dependencies]
read_input = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
strum = "0.20"
strum_macros = "0.20"
yubikey = "0.5"
x509 = "0.2.0"
dryoc = {version = "0.3.12", features = ["serde"] }
shared_stuff = { path = "../shared_stuff", version = "*" }