[package]
name = "server"
version = "0.1.0"
authors = ["SEC"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rustbreak = { version = "2", features = ["ron_enc"] }
lazy_static = "1.4"
bincode = "1.3"
rand = "0.6.3"
p256 = { version = "0.11.0" }
hex = "0.4.3"
lettre = "0.10.0-rc.6"
dotenv = "0.15.0"
shared_stuff = { path = "../shared_stuff", version = "*" }
